# VTKMedicalImageViewer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  VTKMedicalImageViewer.code-workspace  call.back.main.cpp  main.cpp  main.cpp.new.fail  pyproject.toml  rotate.dont.want.main.cpp
lib/: BaseData.cpp  BaseData.h  BaseOverlayButton.cpp  BaseOverlayButton.h  BaseViewer.cpp  BaseViewer.h  CMakeLists.txt  Constants.h  Coordinate.cpp  Coordinate.h  CoordinateRepository.cpp  CoordinateRepository.h  Data3d.cpp  Data3d.h  QOverlayButton.cpp  QOverlayButton.h  QuadViewerWidget.cpp  QuadViewerWidget.h  SliceViewer.cpp  SliceViewer.h  StereoViewer.cpp  StereoViewer.h  ViewerManager.cpp  ViewerManager.h  VisualizationDataType.h  VolumeImage.cpp  VolumeImage.h  VtkCustomizedButton.cpp  VtkCustomizedButton.h  unit.h
src/: CMakeLists.txt  QuadQtVTKRenderWidget.cpp  QuadQtVTKRenderWidget.h  VTKOpenGLWidget.cpp  VTKOpenGLWidget.h  vtkResliceCursorCallback.cpp  vtkResliceCursorCallback.h
src/VTK-FourPlaneWidget/: QtVTKRenderWindows.cpp  QtVTKRenderWindows.h  temp.cpp  temp.ui
