[tool.poetry]
name = "vtkmedicalimageviewer"
version = "0.1.0"
description = ""
authors = ["KK <wkx611@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
vtk = "^9.3.0"
pyqt5 = "^5.15.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
